Host/Source/LibOpenBLT/port/windows/canif/kvaser/canlib.h


typedef int canHandle;
#define canOPEN_EXCLUSIVE               0x0008
#define canOPEN_REQUIRE_EXTENDED        0x0010
#define canOPEN_ACCEPT_VIRTUAL         0x0020
#define canOPEN_OVERRIDE_EXCLUSIVE     0x0040
#define canOPEN_REQUIRE_INIT_ACCESS    0x0080
#define canOPEN_NO_INIT_ACCESS         0x0100
#define canOPEN_ACCEPT_LARGE_DLC       0x0200 
#define canOPEN_CAN_FD                 0x0400
#define canOPEN_CAN_FD_NONISO          0x0800
void CANLIBAPI canInitializeLibrary(void);
CanHandle CANLIBAPI canOpenChannel(int channel, int flags);
canStatus CANLIBAPI canGetChannelData(int channel,
                                      int item,
                                      void *buffer,
                                      size_t bufsize);
#define canCHANNELDATA_CHANNEL_CAP                1
#define canCHANNELDATA_TRANS_CAP                  2
#define canCHANNELDATA_CHANNEL_FLAGS              3   
#define canCHANNELDATA_CARD_TYPE                  4
#define canCHANNELDATA_CARD_NUMBER                5
#define canCHANNELDATA_CHAN_NO_ON_CARD            6
#define canCHANNELDATA_CARD_SERIAL_NO             7
#define canCHANNELDATA_TRANS_SERIAL_NO            8
#define canCHANNELDATA_CARD_FIRMWARE_REV          9
#define canCHANNELDATA_CARD_HARDWARE_REV          10
#define canCHANNELDATA_CARD_UPC_NO                11
#define canCHANNELDATA_TRANS_UPC_NO               12
#define canCHANNELDATA_CHANNEL_NAME               13
#define canCHANNELDATA_DLL_FILE_VERSION          14
#define canCHANNELDATA_DLL_PRODUCT_VERSION       15
#define canCHANNELDATA_DLL_FILETYPE              16
#define canCHANNELDATA_TRANS_TYPE                17
#define canCHANNELDATA_DEVICE_PHYSICAL_POSITION  18
#define canCHANNELDATA_UI_NUMBER                 19
#define canCHANNELDATA_TIMESYNC_ENABLED          20
#define canCHANNELDATA_DRIVER_FILE_VERSION       21
#define canCHANNELDATA_DRIVER_PRODUCT_VERSION    22
#define canCHANNELDATA_MFGNAME_UNICODE           23
#define canCHANNELDATA_MFGNAME_ASCII             24
#define canCHANNELDATA_DEVDESCR_UNICODE          25
#define canCHANNELDATA_DEVDESCR_ASCII            26
#define canCHANNELDATA_DRIVER_NAME               27
#define canCHANNELDATA_CHANNEL_QUALITY           28
#define canCHANNELDATA_ROUNDTRIP_TIME            29
#define canCHANNELDATA_BUS_TYPE                  30
#define canCHANNELDATA_DEVNAME_ASCII             31
#define canCHANNELDATA_TIME_SINCE_LAST_SEEN      32
#define canCHANNELDATA_REMOTE_OPERATIONAL_MODE   33
#define canCHANNELDATA_REMOTE_PROFILE_NAME   34
#define canCHANNELDATA_REMOTE_HOST_NAME   35
#define canCHANNELDATA_REMOTE_MAC   36
#define canCHANNELDATA_MAX_BITRATE   37
#define canCHANNELDATA_CHANNEL_CAP_MASK  38
#define canCHANNELDATA_CUST_CHANNEL_NAME  39
#define canCHANNELDATA_IS_REMOTE  40
#define canCHANNELDATA_REMOTE_TYPE  41
#define canCHANNELDATA_LOGGER_TYPE  42
#define canCHANNEL_IS_EXCLUSIVE         0x0001
#define canCHANNEL_IS_OPEN              0x0002
#define canCHANNEL_IS_CANFD             0x0004
#define canHWTYPE_NONE                0 
#define canHWTYPE_VIRTUAL             1 
#define canHWTYPE_LAPCAN              2 
#define canHWTYPE_CANPARI             3 
#define canHWTYPE_PCCAN               8 
#define canHWTYPE_PCICAN              9 
#define canHWTYPE_USBCAN             11 
#define canHWTYPE_PCICAN_II          40 
#define canHWTYPE_USBCAN_II          42 
#define canHWTYPE_SIMULATED          44 
#define canHWTYPE_ACQUISITOR         46 
#define canHWTYPE_LEAF               48 
#define canHWTYPE_PC104_PLUS         50 
#define canHWTYPE_PCICANX_II         52 
#define canHWTYPE_MEMORATOR_II       54 
#define canHWTYPE_MEMORATOR_PRO      54 
#define canHWTYPE_USBCAN_PRO         56 
#define canHWTYPE_IRIS               58 
#define canHWTYPE_BLACKBIRD          58 
#define canHWTYPE_MEMORATOR_LIGHT    60 
#define canHWTYPE_MINIHYDRA          62 
#define canHWTYPE_EAGLE              62 
#define canHWTYPE_BAGEL              64 
#define canHWTYPE_BLACKBIRD_V2       64 
#define canHWTYPE_MINIPCIE           66 
#define canHWTYPE_USBCAN_KLINE       68 
#define canHWTYPE_ETHERCAN           70 
#define canHWTYPE_USBCAN_LIGHT       72 
#define canHWTYPE_USBCAN_PRO2        74 
#define canHWTYPE_PCIE_V2            76 
#define canHWTYPE_MEMORATOR_PRO2     78 
#define canHWTYPE_LEAF2              80 
#define canHWTYPE_MEMORATOR_V2       82 
#define canCHANNEL_CAP_EXTENDED_CAN      0x00000001L 
#define canCHANNEL_CAP_BUS_STATISTICS    0x00000002L 
#define canCHANNEL_CAP_ERROR_COUNTERS    0x00000004L 
#define canCHANNEL_CAP_GENERATE_ERROR    0x00000010L 
#define canCHANNEL_CAP_GENERATE_OVERLOAD 0x00000020L 
#define canCHANNEL_CAP_TXREQUEST         0x00000040L 
#define canCHANNEL_CAP_TXACKNOWLEDGE     0x00000080L 
#define canCHANNEL_CAP_VIRTUAL           0x00010000L 
#define canCHANNEL_CAP_SIMULATED         0x00020000L 
#define canCHANNEL_CAP_CAN_FD            0x00080000L 
#define canCHANNEL_CAP_CAN_FD_NONISO     0x00100000L 
#define canCHANNEL_CAP_SILENT_MODE       0x00200000L 
#define canCHANNEL_CAP_SINGLE_SHOT       0x00400000L 
#define canCHANNEL_CAP_LOGGER            0x00800000L 
#define canCHANNEL_CAP_REMOTE_ACCESS     0x01000000L 
#define canCHANNEL_CAP_SCRIPT            0x02000000L 
#define canDRIVER_CAP_HIGHSPEED             0x00000001L
canStatus CANLIBAPI canUnloadLibrary(void);
#define kvLED_ACTION_ALL_LEDS_ON   0 
#define kvLED_ACTION_ALL_LEDS_OFF  1 
#define kvLED_ACTION_LED_0_ON      2 
#define kvLED_ACTION_LED_0_OFF     3 
#define kvLED_ACTION_LED_1_ON      4 
#define kvLED_ACTION_LED_1_OFF     5 
#define kvLED_ACTION_LED_2_ON      6 
#define kvLED_ACTION_LED_2_OFF     7 
#define kvLED_ACTION_LED_3_ON      8 
#define kvLED_ACTION_LED_3_OFF     9 
typedef canStatus kvStatus;
typedef __int64 kvEnvHandle;
kvStatus CANLIBAPI kvScriptEnvvarClose(kvEnvHandle eHnd);
kvStatus CANLIBAPI kvScriptEnvvarSetInt(kvEnvHandle eHnd, int val);
kvStatus CANLIBAPI kvScriptEnvvarGetInt(kvEnvHandle eHnd, int *val);
kvStatus CANLIBAPI kvScriptEnvvarSetFloat(kvEnvHandle eHnd, float val);
kvStatus CANLIBAPI kvScriptEnvvarGetFloat(kvEnvHandle eHnd, float *val);
kvStatus CANLIBAPI kvScriptEnvvarSetData(kvEnvHandle eHnd,
                                         const void *buf,
                                         int start_index,
                                         int data_len);
kvStatus CANLIBAPI kvScriptEnvvarGetData(kvEnvHandle eHnd,
                                         void *buf,
                                         int start_index,
                                         int data_len);
kvStatus CANLIBAPI kvScriptLoadFileOnDevice(const CanHandle hnd,
                                            int slotNo,
                                            char *localFile);
kvStatus CANLIBAPI kvScriptLoadFile(const CanHandle hnd,
                                    int slotNo,
                                    char *filePathOnPC);
kvStatus CANLIBAPI kvScriptRequestText(const CanHandle hnd,
                                       unsigned int slot,
                                       unsigned int request);
kvStatus CANLIBAPI kvScriptGetText(const CanHandle hnd,
                                        int  *slot,
                                        unsigned long *time,
                                        unsigned int  *flags,
                                        char *buf,
                                        size_t bufsize);
kvStatus CANLIBAPI kvScriptGetMaxEnvvarSize(int hnd, int *envvarSize);
kvStatus CANLIBAPI kvFileCopyToDevice(const CanHandle hnd,
                                      char *hostFileName,
                                      char *deviceFileName);
kvStatus CANLIBAPI kvFileCopyFromDevice(const CanHandle hnd,
                                        char *deviceFileName,
                                        char *hostFileName);
kvStatus CANLIBAPI kvFileDelete(const CanHandle hnd, char *deviceFileName);
kvStatus CANLIBAPI kvFileGetName(const CanHandle hnd,
                                 int fileNo,
                                 char *name,
                                 int namelen);
kvStatus CANLIBAPI kvFileGetCount(const CanHandle hnd, int *count);
kvStatus CANLIBAPI kvFileGetSystemData(const CanHandle hnd,
                                       int itemCode,
                                       int *result);
kvStatus CANLIBAPI kvDeviceSetMode(const CanHandle hnd, int mode);
kvStatus CANLIBAPI kvDeviceGetMode(const CanHandle hnd, int *result);
kvStatus CANLIBAPI kvPingRequest(const CanHandle hnd,
                                 unsigned int *requestTime);
kvStatus CANLIBAPI kvPingGetLatest(const CanHandle hnd,
                                   unsigned int *requestTime,
                                   unsigned int *pingTime);